create other templates, fix the Public views file issues, update the settings.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -36,15 +36,16 @@ crypto==1.4.1
 cryptography==2.2.2
 cssselect2==0.2.1
 cupshelpers==1.0
+cvlib==0.1.8
 cycler==0.10.0
 Cython==0.28.5
 dask==1.1.0
 decorator==4.3.0
 defer==1.0.6
 defusedxml==0.5.0
-distro-info==0.18
+distro-info===0.18ubuntu0.18.04.1
 dj-database-url==0.5.0
-Django==1.11.12
+Django==1.11.20
 django-admin-sortable==2.1.5
 django-adminplus==0.5
 django-allauth==0.36.0
@@ -105,9 +106,11 @@ docker-compose==1.22.0
 docker-pycreds==0.3.0
 dockerpty==0.4.1
 docopt==0.6.2
+docutils==0.14
 easy-thumbnails==2.5
 EasyProcess==0.2.5
-entrypoints==0.2.3
+entrypoints==0.3
+flake8==3.7.7
 future==0.16.0
 gast==0.2.2
 google-api-python-client==1.7.3
@@ -213,10 +216,11 @@ pyasn1-modules==0.2.1
 PyAudio==0.2.11
 pycairo==1.16.2
 pycares==2.4.0
-pycodestyle==2.4.0
+pycodestyle==2.5.0
 pycparser==2.18
 pycrypto==2.6.1
 pycups==1.9.73
+pyflakes==2.1.1
 pygame==1.9.4
 pyglui==1.23
 Pygments==2.2.0
