create tox.ini for auto testing and flake8 checks remove unused requirements from requirements.txt disable plugins in .coveragerc file

--- a/.coveragerc
+++ b/.coveragerc
@@ -3,8 +3,8 @@ source = .
 branch = True
 omit =
     Public/migrations/*
-plugins=
-    django_coverage_plugin
+# plugins=
+#     django_coverage_plugin
 
 # [report]
 # exclude_lines =
